--- a/www/app/nearby/nearby.html
+++ b/www/app/nearby/nearby.html
@@ -1,17 +1,26 @@
-<ion-view view-title="Nearby Family-Style Tables">
-  <ion-content class="padding">
+<ion-view view-title="Nearby Tables">
+  <ion-content class="grey-background">
     <div>
-      <div class="in-line" ng-repeat="rest in vm.nearbyEvents">
-        <div class="rest-results">
-          <h3>{{rest.restaurantName}}</h3>
-          <p>{{rest.restaurantAddress.address[0]}}, {{rest.restaurantAddress.city}}, {{rest.restaurantAddress.state_code}}, {{rest.restaurantAddress.postal_code}}</p>
-          <p>There {{rest.users.length === 1 ? 'is' : 'are'}} {{rest.users.length}} {{rest.users.length === 1 ? 'person' : 'people'}} going to this event on {{rest.dateTime | date:"medium"}}</p>
+      <div ng-click="vm.tablePage(rest)" class="white-background nearby-item" ng-repeat="rest in vm.nearbyEvents">
+        <div class="col-25">
+          <img src="{{rest.image_url}}"/>
         </div>
-
-        <div text-right>
-          <button class="button button-small button-assertive text-right" ng-click="vm.tablePage(rest)">
-            Join Table
+        <div class="col-55">
+          <div class="restaurant-name">
+            {{rest.restaurantName}}
+          </div>
+          <div class="top-address">
+            {{rest.restaurantAddress.address[0]}}
+          </div>
+          <div>
+            {{rest.restaurantAddress.city}}, {{rest.restaurantAddress.state_code}} {{rest.restaurantAddress.postal_code}}
+          </div>
+        </div>
+        <div class="col-15">
+          <button class="button button-small button-assertive" ng-click="vm.tablePage(rest)">
+            Table Options
           </button>
+        </div>
         </div>
       </div>
     </div>
