--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,10 @@
     <!-- IF using Sass (run gulp sass first) -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/style.create.css" rel="stylesheet">
+    <link href="css/create.css" rel="stylesheet">
     <link href="css/search.css" rel="stylesheet">
+    <link href="css/nearby.css" rel="stylesheet">
+    <link href="css/outings.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -40,7 +42,6 @@
     <script src="app/tables/tables.controller.js"></script>
     <script src="app/myTable/myTable.controller.js"></script>
     <script src="app/leaderBoard/leaderBoard.controller.js"></script>
-    <script src="https://maps-api-ssl.google.com/maps/api/js?libraries=places"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
