create a working version of the login page that has styling

--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -1,12 +1,14 @@
-<ion-view>
+<ion-view class="backpic">
   <ion-content class="padding text-center">
-    <h2>Welcome to Family Style</h2>
-    <p>
-      Experience a restaurant's full menu in one visit.
-    </p>
-    <hr/>
+    <div class="opening">Family Style</div>
+    <div class="subtitle">
+      enjoy a family style meal with new friends 
+    </div>
+
+    <div class="fb-button">
     <button class="button button-block button-positive fb-login" ng-click="vm.fbLogin()">
     Login with Facebook
     </button>
+  </div>
   </ion-content>
 </ion-view>
