--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,8 @@
     <link href="css/nearby.css" rel="stylesheet">
     <link href="css/outings.css" rel="stylesheet">
     <link href="css/popular.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
