--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
     <link href="css/search.css" rel="stylesheet">
     <link href="css/nearby.css" rel="stylesheet">
     <link href="css/outings.css" rel="stylesheet">
+    <link href="css/popular.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
