--- a/www/app/nearby/nearby.html
+++ b/www/app/nearby/nearby.html
@@ -1,5 +1,8 @@
 <ion-view view-title="Nearby Tables">
   <ion-content class="grey-background">
+    <div class="text-center">
+      <h2 ng-show="!vm.nearbyEvents.length && vm.loadingComplete">No restaurants found</h2>
+    </div>
     <div>
       <a class="button button-block button-assertive" ng-click="activate()">Reload this area</a>
     </div>
