Update nearby tables, outings and nav bar design

--- a/www/app/outings/outings.html
+++ b/www/app/outings/outings.html
@@ -20,7 +20,7 @@
           <div class="outing-item">
             {{outing.users.length}} {{outing.users.length === 1 ? 'person' : 'people'}} going to this event
           </div>
-          <div class="date">
+          <div class="date outing-item">
             {{outing.dateTime | date:"MMM d, y h:mm a "}}
           </div>
         </div>
