CSS styling on MyTables page and tables page

--- a/www/app/search/search.html
+++ b/www/app/search/search.html
@@ -46,7 +46,7 @@
             {{rest.location.address[0]}}
           </div>
           <div>
-            {{rest.location.city}}, {{rest.location.state_code}}, {{rest.location.postal_code}}
+            {{rest.location.city}}, {{rest.location.state_code}} {{rest.location.postal_code}}
           </div>
         </div>
       </div>
