--- a/www/app/tables/tables.html
+++ b/www/app/tables/tables.html
@@ -12,7 +12,7 @@
           {{vm.location.address[0]}}
         </div>
         <div>
-          {{vm.location.city}}, {{vm.location.state_code}}, {{vm.location.postal_code}}
+          {{vm.location.city}}, {{vm.location.state_code}} {{vm.location.postal_code}}
         </div>
       </div>
     </div>
