--- a/www/app/myTable/myTable.html
+++ b/www/app/myTable/myTable.html
@@ -1,5 +1,5 @@
 <ion-view view-title="My Table">
-  <ion-content class="padding text-center myTable">
+  <ion-content class="padding text-center mytable">
     <div>
       <div>
         <div class="restaurant-name">{{vm.name}}</div>
